fix color contrast issue

--- a/styles/form.css
+++ b/styles/form.css
@@ -1,6 +1,6 @@
 :root {
     --primary-color: #291dd3;
-    --secondary-color: #d1dff5;
+    --secondary-color: #d9dadf;
     --accent-color: #e2e0e0;
     --font-color: #f8f9fa;
     --font-color1: #000000;
